# djapi-guard

./: .gitignore  .mike.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  compose.yml  mkdocs.yml  pyproject.toml  setup.py  versions.json  vulture_whitelist.py
.github/: FUNDING.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  code-ql.yml  container-release.yml  docs.yml  greetings.yml  release.yml  scheduled-lint.yml  stale.yml  summary.yml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/behavior-manager/: index.html
1.0.1/api/cloud-manager/: index.html
1.0.1/api/core-architecture/: index.html
1.0.1/api/decorators/: index.html
1.0.1/api/ipban-manager/: index.html
1.0.1/api/ipinfo-manager/: index.html
1.0.1/api/overview/: index.html
1.0.1/api/ratelimit-manager/: index.html
1.0.1/api/redis-manager/: index.html
1.0.1/api/security-headers/: index.html
1.0.1/api/security-middleware/: index.html
1.0.1/api/sus-patterns/: index.html
1.0.1/api/utilities/: index.html
1.0.1/installation/: index.html
1.0.1/release-notes/: index.html
1.0.1/tutorial/advanced-customizations/: index.html
1.0.1/tutorial/first-steps/: index.html
2.1.1/: 404.html  index.html  llms.txt  objects.inv  robots.txt  sitemap.xml
2.1.1/api/behavior-manager/: index.html
2.1.1/api/cloud-manager/: index.html
2.1.1/api/core-architecture/: index.html
2.1.1/api/decorators/: index.html
2.1.1/api/ipban-manager/: index.html
2.1.1/api/ipinfo-manager/: index.html
2.1.1/api/overview/: index.html
2.1.1/api/ratelimit-manager/: index.html
2.1.1/api/redis-manager/: index.html
2.1.1/api/security-headers/: index.html
2.1.1/api/utilities/: index.html
2.1.1/installation/: index.html
2.1.1/release-notes/: index.html
2.1.1/search/: search_index.json
2.1.1/versions/: versions.json
2.2.0/: sitemap.xml
2.2.0/search/: search_index.json
4.0.1/: 404.html  index.html  objects.inv  sitemap.xml
4.0.1/installation/: index.html
4.0.1/release-notes/: index.html
4.0.1/search/: search_index.json
4.0.1/versions/: versions.json
djangoapi_guard/: __init__.py  adapters.py  middleware.py  models.py  utils.py
djangoapi_guard/core/: __init__.py
djangoapi_guard/decorators/: __init__.py  access_control.py  advanced.py  authentication.py  base.py  behavioral.py  content_filtering.py  rate_limiting.py
djangoapi_guard/detection_engine/: monitor.py  preprocessor.py  semantic.py
djangoapi_guard/handlers/: behavior_handler.py  cloud_handler.py  dynamic_rule_handler.py  ipban_handler.py  ipinfo_handler.py  ratelimit_handler.py  redis_handler.py  security_headers_handler.py  suspatterns_handler.py
djangoapi_guard/protocols/: __init__.py  agent_protocol.py  geo_ip_protocol.py
docs/: index.md  installation.md  llms.txt  release-notes.md
docs/api/: behavior-manager.md  cloud-manager.md  core-architecture.md  decorators.md  ipban-manager.md  ipinfo-manager.md  overview.md  ratelimit-manager.md  redis-manager.md  security-headers.md  security-middleware.md  sus-patterns.md  utilities.md
docs/tutorial/: advanced-customizations.md  first-steps.md
docs/versions/: versions.json
examples/advanced/: Dockerfile  README.md  compose.yml  manage.py  pyproject.toml
examples/advanced/advanced_app/: views.py
examples/advanced/advanced_project/: settings.py  urls.py  wsgi.py
examples/advanced/nginx/: nginx.conf
examples/simple/: README.md  compose.yml  manage.py  requirements.txt
tests/: conftest.py  settings.py  test_cors_through_pipeline.py  test_coverage_gaps.py  test_middleware.py  test_middleware_lifecycle.py  test_middleware_wiring.py  test_models_legacy.py  test_utils_legacy.py  urls.py
tests/test_agent/: conftest.py  test_behavior_agent_integration.py  test_cloud_agent_integration.py  test_decorator_agent_integration.py  test_drh_agent_integration.py  test_extension_agent_integration.py  test_ipban_agent_integration.py  test_ipinfo_agent_integration.py  test_models_agent_integration.py  test_ratelimit_agent_integration.py  test_redis_agent_integration.py  test_suspatterns_agent_integration.py  test_utils_agent_integration.py
tests/test_cloud_ips/: test_cloud_ips.py
tests/test_core/: test_behavioral.py  test_bypass_handler.py  test_check_implementations.py  test_checks_base.py  test_cloud_provider_edge_cases.py  test_edge_cases.py  test_https_enforcement_edge_cases.py  test_initialization.py  test_ip_security_edge_cases.py  test_metrics.py  test_pipeline.py  test_rate_limit_edge_cases.py  test_routing_resolver.py  test_time_window_edge_cases.py  test_validator.py
tests/test_decorators/: test_access_control.py  test_advanced.py  test_advanced_edge_cases.py  test_authentication.py  test_base.py  test_behavior_handler.py  test_behavior_handler_edge_cases.py  test_behavioral.py  test_content_filtering.py  test_decorator_events.py  test_extension_integration.py  test_rate_limiting.py
tests/test_extension/: test_security_extension.py
tests/test_features/: test_configurable_cloud_refresh.py  test_context_aware_detection.py  test_last_updated_cloud.py  test_structured_json_logging.py
tests/test_handlers/: test_agent_events.py  test_dynamic_rule_handler.py  test_handler_redis_paths.py
tests/test_ipinfo/: test_ipinfo.py
tests/test_models/: test_models.py
tests/test_redis/: test_redis.py
tests/test_security_headers/: test_agent_integration.py  test_cors_integration.py  test_csp_validation.py  test_edge_cases.py  test_extension_integration.py  test_headers_core.py  test_redis_integration.py  test_security_validation.py
tests/test_sus_patterns/: conftest.py  test_compiler.py  test_detection_engine.py  test_extension_integration.py  test_monitor.py  test_preprocessor.py  test_semantic.py  test_sus_patterns.py
tests/test_utils/: test_ip_ban_manager.py  test_logging.py  test_proxy_handling.py  test_request_checks.py  test_utils_edge_cases.py
(+174 files in other folders)
