[project]
name = "djapi-guard"
version = "3.0.0"
description = "A security library for Django to control IPs, log requests, and detect penetration attempts."
authors = [
    {name = "Renzo Franceschini", email = "rennf93@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django",
    "guard-core",
]

[project.urls]
Homepage = "https://github.com/rennf93/djapi-guard"
Documentation = "https://rennf93.github.io/djapi-guard/latest/"
Repository = "https://github.com/rennf93/djapi-guard"
Issues = "https://github.com/rennf93/djapi-guard/issues"
Changelog = "https://github.com/rennf93/djapi-guard/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "deptry",
    "django-stubs",
    "guard-agent",
    "httpx",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "radon",
    "ruff",
    "safety",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djangoapi_guard"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".envrc",
    ".venv/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    ".pre-commit-config.yaml",
    "compose.yml",
    "Dockerfile",
    "Makefile",
    "mkdocs.yml",
    "vulture_whitelist.py",
    "tests/",
    "docs/",
    "examples/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
exclude = ["vulture_whitelist.py", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"examples/**/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=djangoapi_guard --cov-report=term-missing --ignore=tests/test_agent"
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["vulture_whitelist.py", ".venv", "setup.py", "examples"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pymarkdown.plugins.md007]
enabled = true
indent = 2

[tool.pymarkdown.plugins.md012]
enabled = true
maximum = 2

[tool.pymarkdown.plugins.md013]
enabled = false

[tool.pymarkdown.plugins.md024]
enabled = true
siblings_only = true

[tool.pymarkdown.plugins.md033]
enabled = false

[tool.pymarkdown.plugins.md035]
enabled = false

[tool.pymarkdown.plugins.md041]
enabled = false

[tool.pymarkdown.plugins.md046]
enabled = false

[tool.pymarkdown.plugins.md029]
enabled = false

[tool.vulture]
paths = ["djangoapi_guard", "tests", "vulture_whitelist.py"]
exclude = ["**/conftest.py", ".venv"]
min_confidence = 100
ignore_decorators = [
    "@pytest.fixture",
    "@pytest.mark.*",
    "@validator",
    "@root_validator",
    "@field_validator",
    "@model_validator",
]
ignore_names = [
    "test_*",
    "Test*",
    "cleanup_*",
    "mock_*",
    "expected_*",
    "exc_*",
    "__*__",
    "Config",
    "Field",
]
sort_by_size = true

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", ".venv", "vulture_whitelist.py"]
severity = "medium"

[tool.radon]
exclude = "tests/*,.venv/*,vulture_whitelist.py"
cc_min = "C"
mi_min = "A"
no_assert = false
show_closures = true
total_average = true

[tool.xenon]
max_absolute = "B"
max_modules = "A"
max_average = "A"
exclude = ["tests/*", ".venv/*", "vulture_whitelist.py"]
ignore = []

[tool.deptry]
exclude = ["tests", ".venv", "vulture_whitelist.py", "examples", "docs"]
extend_exclude = ["conftest.py", "setup.py"]
known_first_party = ["djangoapi_guard", "guard_core"]
per_rule_ignores = { "DEP002" = [
    "bandit",
    "django-stubs",
    "guard-agent",
    "guard-core",
    "httpx",
    "deptry",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "radon",
    "ruff",
    "safety",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
] }
