[project]
name = "djapi-guard-advanced-example"
version = "1.0.0"
description = "Production-ready DjangoAPI Guard example with nginx, gunicorn, and modular layout"
requires-python = ">=3.10"
dependencies = [
    "django",
    "djapi-guard",
    "gunicorn",
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
